edit footer, detail, slide, header

--- a/about-us.html
+++ b/about-us.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/bootstrap-grid.css">
-    <link rel="stylesheet" href="css/bootstrap-reboot.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="fontawesome/css/all.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
 <body>
 <div id="main">
@@ -64,18 +66,18 @@
         </div>
     </div>
     <!--    End Header-->
-    <div id="content" style="height: 70vh">
+    <div id="content">
         <!--    Begin About-us-->
-        <div class="about-us">
-            <div class="content-left">
+        <div class="about-us container">
+            <div class="content-left text-center">
                 <h1>HẠT KEY</h1>
                 <h2>Chuyên cung Key bản quyền windows và <br> phần các mềm văn phòng chuyên nghiệp</h2>
-                <h3>HẠT KEY XIN CHÀO QUÝ KHÁCH!</h3>
-                <P>Tại đây Keyoff chuyên cung cấp bản quyền Windows và các phần mềm Văn phòng khác. Với giá cả phải
+                <h3>Hạt Key xin chào quý khách!</h3>
+                <P>Tại đây Hạt Key chuyên cung cấp bản quyền Windows và các phần mềm Văn phòng khác. Với giá cả phải
                     chăng mà vẫn đảm bảo chất lượng sản phẩm, cùng với chế độ bảo hành và chăm sóc khách hàng tận
-                    tình. Keyoff tự tin sẽ làm cho bạn hài lòng ngay từ lần mua hàng đầu tiên!
+                    tình. Hạt Key tự tin sẽ làm cho bạn hài lòng ngay từ lần mua hàng đầu tiên!
                     <br><br>
-                    Keyoff hân hạnh được phục vụ Quý khách!!</P>
+                    Hạt Key hân hạnh được phục vụ Quý khách!!</P>
             </div>
 
             <div class="content-main">
@@ -85,9 +87,9 @@
                     </div>
                     <div class="content-main-card-content">
                         <p>Luôn sẵn sàng trợ giúp khách hàng trước khi mua hàng, trong quá trình mua hàng và ngay cả
-                            sau khi mua hàng. Keyoff hiểu rằng giá trị thực sự được tạo ra không chỉ được ở chất
+                            sau khi mua hàng. Hạt Key hiểu rằng giá trị thực sự được tạo ra không chỉ được ở chất
                             lượng của sản phẩm mà còn là cả quá trình chăm sóc khách hàng trước và sau khi mua hàng.
-                            Vì vậy Keyoff luôn lắng nghe và hỗ trợ hết mình khi khách hàng có nhu cầu.</p>
+                            Vì vậy Hạt Key luôn lắng nghe và hỗ trợ hết mình khi khách hàng có nhu cầu.</p>
                     </div>
                 </div>
                 <div class="content-main-card">
@@ -95,7 +97,7 @@
                         <i class="fa-solid fa-gears"></i>
                     </div>
                     <div class="content-main-card-content">
-                        <p>Sau khi các giao dịch được yêu cầu hoàn tất, Keyoff sẽ gửi các sản phẩm kỹ thuật số
+                        <p>Sau khi các giao dịch được yêu cầu hoàn tất, Hạt Key sẽ gửi các sản phẩm kỹ thuật số
                             cho khách hàng gần như ngay lập tức. Chúng tôi luôn đảm bảo rằng những hướng dẫn cụ
                             thể và chi tiết nhất sẽ đi kèm với sản phẩm mà bạn nhận được.</p>
                     </div>
@@ -105,9 +107,9 @@
                         <i class="fa-solid fa-globe"></i>
                     </div>
                     <div class="content-main-card-content">
-                        <p>Keyoff tự tin rằng các sản phẩm phần mềm là 100% chính hãng. Với những ưu điểm không
+                        <p>Hạt Key tự tin rằng các sản phẩm phần mềm là 100% chính hãng. Với những ưu điểm không
                             thể phủ nhận, khách hàng sẽ có những trải nghiệm mua sắm trực tuyến tuyệt vời khi
-                            lựa chọn mua hàng tại Keyoff.</p>
+                            lựa chọn mua hàng tại Hạt Key.</p>
                     </div>
                 </div>
                 <div class="content-main-card">
@@ -116,9 +118,9 @@
                     </div>
                     <div class="content-main-card-content">
                         <p>Chắc chắn rằng trong mỗi khách hàng khi tham khảo giá cả sản phẩm đều hoài nghi rằng
-                            liệu giá rẻ có đảm bảo chất lượng sản phẩm hay không ??. Keyoff xin cam kết rằng
+                            liệu giá rẻ có đảm bảo chất lượng sản phẩm hay không ??. Hạt Key xin cam kết rằng
                             phần mềm và sản phẩm đều là chính hãng. nếu khách hàng không hài lòng về chất lượng
-                            sản phẩm hãy liên hệ với bộ phận hỗ trợ . keyoff sẽ khắc phục sự cố và đổi trả sản
+                            sản phẩm hãy liên hệ với bộ phận hỗ trợ . Hạt Key sẽ khắc phục sự cố và đổi trả sản
                             phẩm theo yêu cầu của khách hàng.</p>
                     </div>
                 </div>
@@ -130,68 +132,81 @@
                 </div>
                 <div class="content-aboutUs-right">
                     <h1>Về chúng tôi</h1>
-                    <p>Với kinh nghiệm nhiều năm trên thị trường phầm mềm ở Vietnam, Keyoff hiểu được nhu cầu thị
+                    <p>Với kinh nghiệm nhiều năm trên thị trường phầm mềm ở Vietnam, Hạt Key hiểu được nhu cầu thị
                         yếu của thị trường và người sử dụng phần mềm. Để đưa ra một mức giá cả hợp lý đáp ứng đầy đủ
                         nhu cầu cần thiết cho người dùng cá nhân và tại các cơ quan.
-                        Là một Partner phân phối sản phẩm cho Microsoft. Keyoff mang lại cho người dùng những sản
+                        Là một Partner phân phối sản phẩm cho Microsoft. Hạt Key mang lại cho người dùng những sản
                         phẩm chính hãng chất lượng nhưng giá cả phải chăng phù hợp với mọi tầng lớp người lao động ở
                         Vietnam.
-                        <br />
-                        Keyoff luôn sẵn sàng lắng nghe và phát triển cùng khách hàng! Và hãy liên hệ chúng tôi nếu
-                        bạn cần giúp đỡ!</p>
+                        <br/>
+                        Hạt Key luôn sẵn sàng lắng nghe và phát triển cùng khách hàng! Và hãy liên hệ chúng tôi nếu
+                        bạn cần giúp đỡ!
+                    </p>
                 </div>
             </div>
+        </div>
+    </div>
+    <!-- End About-us-->
+    <!--    Begin Footer-->
+    <div id="footer">
+        <div class="container footer-main">
+            <div class="footer-left footer-column">
+                <div class="footer-logo ">
+                    <a href="index.html">
+                        <img src="image/logoShopKey.png" alt="">
+                    </a>
+                </div>
+                <div class="text-intro">
+                    <p>Đăng kí ngay để nhận được các thông tin ưu đãi,
+                        khuyến mãi đến từ cửa hàng và cũng như cập nhật các tin tức thông tin
+                        về sản phẩm.
+                    </p>
+                </div>
+                <div class="newsletter-sign-up">
+                    <h2 class="newsletter-title">Đăng kí bản tin</h2>
+                    <input class="newsletter-input" type="text" name="" id="" placeholder="Email">
+                    <button class="newsletter-button">Gửi</button>
+                </div>
+            </div>
+            <div class="footer-center footer-column">
+                <div class="footer-space"></div>
+                <h4 class="footer-title">Sản Phẩm</h4>
+                <div class="footer-list-product">
+                    <a class="footer-product-item" href=""><i class="fa-solid fa-chevron-right"></i>Windows</a>
+                    <a class="footer-product-item" href=""><i class="fa-solid fa-chevron-right"></i>Office</a>
+                    <a class="footer-product-item" href=""><i class="fa-solid fa-chevron-right"></i>Adobe</a>
+                    <a class="footer-product-item" href=""><i class="fa-solid fa-chevron-right"></i>Anti Virus</a>
+                    <a class="footer-product-item" href=""><i class="fa-solid fa-chevron-right"></i>Google</a>
+                    <a class="footer-product-item" href=""><i class="fa-solid fa-chevron-right"></i>Khác</a>
+                </div>
+            </div>
+            <div class="footer-right footer-column">
+                <div class="footer-space"></div>
+                <h4 class="footer-title">Liên Hệ</h4>
+                <div class="footer-contact">
+                    <p class="footer-information"><i class="fa-solid fa-location-dot"></i>Đại học Nông Lâm TpHCM</p>
+                    <p class="footer-information"><i class="fa-solid fa-phone"></i>(+84) 852995378</p>
+                    <p class="footer-information"><i class="fa-solid fa-envelope"></i>20130260@st.hcmuaf.edu.vn</p>
+                </div>
+                <div class="footer-social">
+                    <a href=""><i class="fa-brands fa-facebook"></i></a>
+                    <a href=""><i class="fa-brands fa-twitter"></i></a>
+                    <a href=""><i class="fa-brands fa-instagram"></i></a>
+                    <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                    <a href=""><i class="fa-brands fa-github"></i></a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--    End Footer-->
+</div>
 
-        </div>
-        <!-- End About-us-->
-        <!--    Begin Footer-->
-        <div id="footer">
-            <div class="container d-flex justify-content-sm-between">
-                <div class="about-us-footer">
-                    <div class="big-title-footer"><h4>THÔNG TIN LIÊN HỆ</h4></div>
-                    <div class="address">
-                        <p><i class="fa-solid fa-house"></i> Đại học Nông Lâm TpHCM</p>
-                        <p><i class="fa-solid fa-envelope"></i> 20130260@st.hcmuaf.edu.vn</p>
-                        <p><i class="fa-solid fa-phone"></i> 0852995378</p>
-                    </div>
-                </div>
-                <div class="product-footer">
-                    <div class="big-title-footer"><h4>SẢN PHẨM</h4></div>
-                    <p>Windows</p>
-                    <p>Microsoft Office</p>
-                    <p>Anti Virus</p>
-                    <p>SQL Server</p>
-                    <p>Adobe</p>
-                </div>
-                <div class="policy">
-                    <div class="big-title-footer"><h4>CHÍNH SÁCH</h4></div>
-                    <p>Chính sách thanh toán</p>
-                    <p>Chính sách bảo hành</p>
-                    <p>Chính sách đổi trả</p>
-                    <p>Chính sách bảo mật</p>
-                </div>
-                <div class="social">
-                    <div class="big-title-footer"><h4>XÃ HỘI</h4></div>
-                    <div class="social-icon">
-                        <a href="#"><i class="fa-brands fa-facebook"></i></a>
-                        <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                        <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                    </div>
-                </div>
-            </div>
-            <div class="copy-right p-2">
-                <div class="container">
-                    <p class="mb-0"><i class="fa-regular fa-copyright mr-2"></i>Bản quyền thuộc về Hạc Key Shop</p>
-                </div>
-            </div>
-        </div>
-        <!--    End Footer-->
-    </div>
-    <!--    Begin Back to top-->
-    <div id="back-to-top">
-        <a class="link-btt" href="#main"><i class="fa-sharp fa-solid fa-arrow-up"></i></a>
-    </div>
-    <!--    End Back to top-->
+
+<!--    Begin Back to top-->
+<div id="back-to-top">
+    <a class="link-btt" href="#main"><i class="fa-sharp fa-solid fa-arrow-up"></i></a>
+</div>
+<!--    End Back to top-->
 </div>
 <!--Begin Login-->
 <div id="login">
