Adjust admin and checkout site

--- a/checkout.html
+++ b/checkout.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/bootstrap-grid.css">
   <link rel="stylesheet" href="css/bootstrap-reboot.css">
+  <link rel="stylesheet" href="fontawesome/css/all.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
